Added members presentation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 </nav>
 
-<header style="background-image: linear-gradient(to left, rgba(255,221,0,0.67), #decfb8); background-size: cover; background-position: center;">
+<header style="background-image: linear-gradient(to left, rgba(255,221,0,0.67), #decfb8); background-size: auto; background-position: center;">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -42,6 +42,61 @@
         </div>
     </div>
 </header>
-
+<hr class="my-4">
+<div id="about" class="container">
+    <div class="row">
+        <div class="col-12">
+            <h2 class="display-4 text-center">À propos</h2>
+            <p class="lead text-center">Eloquéncia est une plateforme de cours en ligne pour apprendre à parler en public. Nous proposons des cours en ligne, des ateliers et des formations pour vous aider à devenir un orateur hors pair.</p>
+        </div>
+    </div>
+</div>
+<hr class="my-4">
+<div id="team" class="container">
+    <div class="row">
+        <div class="col-12">
+            <h2 class="display-4 text-center">Notre équipe</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            <div class="card">
+                <img src="assets/members/1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h6 class="card-subtitle mb-2 text-muted text-center">Président</h6>
+                    <h5 class="card-title text-center">Marouan JLASSI</h5>
+                    <p class="card-text">Présentation de Marouan</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card">
+                <img src="assets/members/2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h6 class="card-subtitle mb-2 text-muted text-center">Vice-Président</h6>
+                    <h5 class="card-title text-center">Jean Dupont</h5>
+                    <p class="card-text">Présentation de Jean</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card">
+                <img src="assets/members/3.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h6 class="card-subtitle mb-2 text-muted text-center">Trésorière</h6>
+                    <h5 class="card-title text-center">Jeanne Dupond</h5>
+                    <p class="card-text">Présentation de Jeanne</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<hr class="my-4">
+<!-- Footer -->
+<footer class="bg-body-tertiary text-center text-lg-start">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2024 Eloquéncia
+    </div>
+</footer>
 </body>
 </html>
