removed header background

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 </nav>
 
-<header style="background-image: linear-gradient(to left, rgba(255,221,0,0.67), #decfb8); background-size: auto; background-position: center;">
+<header>
     <div class="container">
         <div class="row">
             <div class="col-12">
